# python-fattureincloud

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
src/fattureincloud/: client.py  exceptions.py
src/fattureincloud/models/: acquisti.py  anagrafica.py  base.py  corrispettivi.py  documenti.py  magazzino.py  mail.py  prodotti.py
tests/: mocking.py  test_anagrafica.py  test_client.py  test_documenti.py  test_exceptions.py  test_prodotti.py
tests/models/: test_acquisti.py  test_anagrafica.py  test_corrispettivi.py  test_documenti.py  test_magazzino.py  test_mail.py  test_prodotti.py
tests/responses/: account.json  error.json  info.json
tests/responses/acquisti/: acquisti.json  dettagli.json
tests/responses/anagrafica/: clienti.json  fornitori.json
tests/responses/corrispettivi/: corrispettivi.json
tests/responses/documenti/: ddt.json  dettagli.json  fatture.json  info.json  infomail.json  ndc.json  ordini.json  preventivi.json  proforma.json  ricevute.json
tests/responses/magazzino/: arrivimerce.json  dettagli.json
tests/responses/mail/: mail.json
tests/responses/prodotti/: prodotti.json  prodotti_2_pages.json
