[build-system]
requires = 
    "setuptools>=42",
    "wheel",
build-backend = "setuptools.build_meta"

[flake8]
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .venv,
    .vscode,
    */migrations/*,
ignore = E501,T499,W503
max-line-length = 80
mypy_config = setup.cfg
select = B,C,E,F,I,W,T4,B9

[metadata]
# replace with your username:
name = python-fattureincloud
version = 0.0.1
author = 20tab srl
author_email = info@20tab.com
description = A python wrapper for FattureInCloud REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/20tab/python-fattureincloud
project_urls =
    Bug Tracker = https://github.com/20tab/python-fattureincloud/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[mypy]
ignore_missing_imports=True

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
